# nova-notion-bridge

./: .replit  Requirements  file_syncer.py  main.py  pre_deploy_check.ps1  pre_deploy_check.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
database/: __init__.py  logic_metadata.json  notion_client.py  schema_manager.py
logic/: __init__.py  logic_syncer.py
logic_engine/: __init__.py  dispatcher.py  executor.py  hooks.py  plugin_base.py  plugin_registry.py  registry.py  schema.py  validators.py
logic_engine/plugins/: __init__.py  daily_checkin.py  default_plugin.py  if_else.py  notion_sync_check.py  plugin_generator.py  resilience_mode.py  webhook.py
logic_engine/plugins/builtin/: echo_plugin.py
modules/: __init__.py  example_plugin.py  logic_syncer.py
modules/commands/: __init__.py  handler.py
modules/metadata/: __init__.py  reporter.py
modules/resilience/: __init__.py  coach.py
routes/: __init__.py  command_center.py  dynamic.py  echo.py  endpoint_router.py  logic_sync.py  notion_routes.py  oauth.py  oauth_routes.py  routes_init.py  sync_logic.py  validate_plugins.py
routes/logic/: logic_syncer.py
startup/: __init__.py  auto_sync.py  bootstrap.py
tests/: test_dynamic_logic.py  test_dynamic_route.py  test_logic_execution.py  test_plugin_loading.py  test_sync_logic.py
utils/: __init__.py  codegen.py  notion.py
